--- a/bigbang/kyverno.yaml
+++ b/bigbang/kyverno.yaml
@@ -22,3 +22,7 @@ kyvernopolicies:
         validationFailureAction: audit
       require-non-root-user:
         validationFailureAction: audit
+      restrict-host-path-mount:
+        validationFailureAction: audit
+      restrict-host-path-mount-pv:
+        validationFailureAction: audit
